fix: 修改Thread工具名称